Add categories page, use 1 location timeline for all location view, update entity onDelete to use cascade, update fixtures

--- a/app/Resources/TwigBundle/Views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/Views/Exception/error404.html.twig
@@ -1,5 +1,20 @@
 {% extends 'base.html.twig' %}
 {% block title %}404 - Page not found{% endblock %}
+{% block navbar %}
+    <ul class="nav navbar-nav">
+        <li><a href="{{ path('trip_list') }}">Trips</a></li>
+        <li><a href="{{ path('trip_categories') }}">Categories</a></li>
+        <li><a href="{{ path('trip_locations') }}">Locations</a></li>
+        <li><a href="#">Maps</a></li>
+    </ul>
+{% endblock %}
 {% block body %}
-    <h1>Page not found.</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="content-header clearfix"></div>
+            <div class="content-body">
+                <h1>Page not found.</h1>
+            </div>
+        </div>
+    </div>
 {% endblock %}
