--- a/src/TriplogBundle/Resources/views/Category/show.html.twig
+++ b/src/TriplogBundle/Resources/views/Category/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
-{% block title %}Trip - {{ trip.tripName }}{% endblock %}
+{% block title %}Category - {{ category.tripCatName }}{% endblock %}
 
 {% block navbar %}
     <ul class="nav navbar-nav">
-        <li class="active"><a href="{{ path('trip_list') }}">Trips</a></li>
-        <li><a href="{{ path('trip_categories') }}">Categories</a></li>
+        <li><a href="{{ path('trip_list') }}">Trips</a></li>
+        <li class="active"><a href="{{ path('trip_categories') }}">Categories</a></li>
         <li><a href="{{ path('trip_locations') }}">Locations</a></li>
         <li><a href="#">Maps</a></li>
     </ul>
@@ -16,9 +16,8 @@
             <div class="content-header clearfix">
                 <div class="popover top">
                     <div class="arrow"></div>
-                    <h3 class="popover-title">{{ trip.tripName }}</h3>
+                    <h3 class="popover-title">{{ category.tripCatName }}</h3>
                     <div class="popover-content">
-                        <p>{{ trip.tripDesc }}</p>
                     </div>
                 </div>
             </div>
@@ -31,10 +30,10 @@
     {{ parent() }}
     <script type="text/babel" src="{{ asset('js/locationtimeline.react.js') }}"></script>
     <script type="text/babel">
-        var tripLocUrl = '{{ path('api_trip_view', { 'id' : trip.id })}}';
+        var categoryUrl = '{{ path('api_category_view', {"id": category.id})}}';
 
         ReactDOM.render(
-                <LocationTimeline url={tripLocUrl} />,
+                <LocationTimeline url={categoryUrl} />,
             document.getElementById('js-timeline-wrapper')
         );
     </script>
