--- a/src/TriplogBundle/Resources/views/Default/index.html.twig
+++ b/src/TriplogBundle/Resources/views/Default/index.html.twig
@@ -1,13 +1,15 @@
+{% block title %}Triplog{% endblock %}
 {% extends 'base.html.twig' %}
-
-{% block body %}
-
-{% endblock %}
 
 {% block navbar %}
     <ul class="nav navbar-nav">
         <li><a href="{{ path('trip_list') }}">Trips</a></li>
-        <li><a href="{{ path('trip_locations') }}">Trip Locations</a></li>
-        <li><a href="#">Trips Maps</a></li>
+        <li><a href="{{ path('trip_categories') }}">Categories</a></li>
+        <li><a href="{{ path('trip_locations') }}">Locations</a></li>
+        <li><a href="#">Maps</a></li>
     </ul>
+{% endblock %}
+
+{% block body %}
+
 {% endblock %}
