--- a/src/TriplogBundle/Resources/views/Location/show.html.twig
+++ b/src/TriplogBundle/Resources/views/Location/show.html.twig
@@ -4,8 +4,9 @@
 {% block navbar %}
     <ul class="nav navbar-nav">
         <li><a href="{{ path('trip_list') }}">Trips</a></li>
-        <li class="active"><a href="{{ path('trip_locations') }}">Trip Locations</a></li>
-        <li><a href="#">Trips Maps</a></li>
+        <li><a href="{{ path('trip_categories') }}">Categories</a></li>
+        <li class="active"><a href="{{ path('trip_locations') }}">Locations</a></li>
+        <li><a href="#">Maps</a></li>
     </ul>
 {% endblock %}
 
