Update on twig and react script

--- a/src/TriplogBundle/Resources/public/css/main.css
+++ b/src/TriplogBundle/Resources/public/css/main.css
@@ -30,6 +30,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-size: 20px;
 }
 
+.navbar-fixed-top {
+    z-index: 9999;
+}
+
 #map {
     height:480px;
     width: 100%;
