Add new service trip.data_renderer. Change all controller to use service. Add api call to location list for map.

--- a/src/TriplogBundle/Resources/views/Location/list.html.twig
+++ b/src/TriplogBundle/Resources/views/Location/list.html.twig
@@ -6,7 +6,7 @@
         <li><a href="{{ path('trip_list') }}">Trips</a></li>
         <li><a href="{{ path('trip_categories') }}">Categories</a></li>
         <li class="active"><a href="{{ path('trip_locations') }}">Locations</a></li>
-        <li><a href="#">Maps</a></li>
+        <li><a href="{{ path('trips_map') }}">Maps</a></li>
     </ul>
 {% endblock %}
 
