--- a/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
@@ -17,7 +17,7 @@
     </div>
     <div class="messages"></div>
     <div class="action-links clearfix">
-        <a href="#" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Category</a>
+        <a href="{{ path('admin_category_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Category</a>
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">Trip category list</div>
