Customize form label and element, add datetimepicker js.

--- a/app/Resources/views/admin.base.html.twig
+++ b/app/Resources/views/admin.base.html.twig
@@ -48,11 +48,16 @@
                 {% block sidebar %}{% endblock %}
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    {% for msg in app.session.flashBag.get('success') %}
-                        <div class="alert alert-success alert-wrapper">
-                            {{ msg }}
-                        </div>
-                    {% endfor %}
+                {% for msg in app.session.flashBag.get('success') %}
+                    <div class="alert alert-success alert-wrapper">
+                        {{ msg }}
+                    </div>
+                {% endfor %}
+                {% for msg in app.session.flashBag.get('error') %}
+                    <div class="alert alert-danger alert-wrapper">
+                        {{ msg }}
+                    </div>
+                {% endfor %}
                 {% block body %}{% endblock %}
                 </div>
             </div>
@@ -61,9 +66,8 @@
             {% javascripts filter="?jsqueeze" output="js/compiled/admin.vendor.min.js"
                 "js/vendor/jquery.min.js"
                 "js/vendor/bootstrap.min.js"
-                "js/vendor/icheck.min.js"
-                "js/vendor/jquery.fs.selecter.min.js"
-                "js/vendor/jquery.fs.stepper.min.js"
+                "js/vendor/moment.min.js"
+                "js/vendor/bootstrap-datetimepicker.min.js"
             %}
                 <script src="{{ asset_url }}"></script>
             {% endjavascripts %}
