--- a/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
@@ -11,7 +11,7 @@
     <div class="breacrumb-wrapper">
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
+            <li><a href="{{ path('admin_trip_categories_list') }}">Categories</a></li>
             <li><a href="#">List</a></li>
         </ol>
     </div>
