--- a/src/TriplogBundle/Resources/views/Admin/Category/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Category/new.html.twig
@@ -2,8 +2,8 @@
 {% extends 'admin.base.html.twig' %}
 {% block sidebar %}
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
-        <li><a href="{{ path('admin_trip_categories_list') }}"><i class="fa fa-list-ul" aria-hidden="true"></i> Categories</a></li>
+        <li><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
+        <li class="active"><a href="{{ path('admin_trip_categories_list') }}"><i class="fa fa-list-ul" aria-hidden="true"></i> Categories</a></li>
         <li><a href="{{ path('admin_trip_locations_list') }}"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</a></li>
     </ul>
 {% endblock %}
@@ -11,8 +11,8 @@
     <div class="breacrumb-wrapper">
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Trips</a></li>
-            <li><a href="#">List</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">New</a></li>
         </ol>
     </div>
     <div class="messages"></div>
@@ -20,8 +20,13 @@
         <div class="panel-heading">Add new category</div>
         <div class="form-wrapper">
             {{ form_start(categoryForm) }}
-            {{ form_widget(categoryForm) }}
-            <button type="submit" class="btn btn-primary">Save</button>
+            {{ form_row(categoryForm.tripCatName, {
+                'label' : 'Category name'
+            }) }}
+            {{ form_row(categoryForm.createdAt, {
+                'label' : 'Date'
+            }) }}
+            <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
             {{ form_end(categoryForm) }}
         </div>
     </div>
