--- a/src/TriplogBundle/Resources/views/Admin/Location/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Location/new.html.twig
@@ -2,9 +2,9 @@
 {% extends 'admin.base.html.twig' %}
 {% block sidebar %}
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
+        <li><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
         <li><a href="{{ path('admin_trip_categories_list') }}"><i class="fa fa-list-ul" aria-hidden="true"></i> Categories</a></li>
-        <li><a href="{{ path('admin_trip_locations_list') }}"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</a></li>
+        <li class="active"><a href="{{ path('admin_trip_locations_list') }}"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</a></li>
     </ul>
 {% endblock %}
 {% block body %}
@@ -12,7 +12,7 @@
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
             <li><a href="#">Locations</a></li>
-            <li><a href="#">Add</a></li>
+            <li><a href="#">New</a></li>
         </ol>
     </div>
     <div class="messages"></div>
@@ -20,8 +20,28 @@
         <div class="panel-heading">Add new location</div>
         <div class="form-wrapper">
             {{ form_start(locationForm) }}
-            {{ form_widget(locationForm) }}
-            <button type="submit" class="btn btn-primary">Save</button>
+            {{ form_row(locationForm.trip, {
+                'label' : 'Trip'
+            }) }}
+            {{ form_row(locationForm.tripCategory,{
+                'label' : 'Category'
+            }) }}
+            {{ form_row(locationForm.tripLocName,{
+                'label' : 'Location'
+            }) }}
+            {{ form_row(locationForm.tripLocDesc,{
+                'label' : 'Description'
+            }) }}
+            {{ form_row(locationForm.tripLatLon,{
+                'label' : 'Coordinate'
+            }) }}
+            {{ form_row(locationForm.isPublic,{
+                'label' : 'Public'
+            }) }}
+            {{ form_row(locationForm.createdAt,{
+                'label' : 'Date'
+            }) }}
+            <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
             {{ form_end(locationForm) }}
         </div>
     </div>
