--- a/src/TriplogBundle/Resources/views/Admin/Trip/edit.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Trip/edit.html.twig
@@ -12,12 +12,12 @@
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
             <li><a href="#">Trips</a></li>
-            <li><a href="#">New</a></li>
+            <li><a href="#">Edit</a></li>
         </ol>
     </div>
     <div class="messages"></div>
     <div class="panel panel-default">
-        <div class="panel-heading">Add new trip</div>
+        <div class="panel-heading">Edit trip</div>
         <div class="form-wrapper">
             {{ form_start(tripForm) }}
             {{ form_row(tripForm.tripName,{
