--- a/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
@@ -11,7 +11,7 @@
     <div class="breacrumb-wrapper">
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Locations</a></li>
+            <li><a href="{{ path('admin_trip_locations_list') }}">Locations</a></li>
             <li><a href="#">List</a></li>
         </ol>
     </div>
