--- a/src/TriplogBundle/Resources/views/Admin/trip.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/trip.index.html.twig
@@ -11,7 +11,7 @@
     <div class="breacrumb-wrapper">
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Trips</a></li>
+            <li><a href="{{ path('admin_trip_list') }}">Trips</a></li>
             <li><a href="#">List</a></li>
         </ol>
     </div>
@@ -41,7 +41,7 @@
                 <td>{% if trip.isPublic == 1 %}Public{% else %}Private{% endif %}</td>
                 <td>{{ trip.createdAt | date("Y-m-d H:i:s") }}</td>
                 <td>
-                    <a href="#" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
+                    <a href="{{ path('admin_trip_edit', {"id" : trip.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
                     <a href="#" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
                 </td>
             </tr>
