--- a/src/TriplogBundle/Resources/views/Admin/Category/edit.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Category/edit.html.twig
@@ -17,7 +17,7 @@
     </div>
     <div class="messages"></div>
     <div class="panel panel-default">
-        <div class="panel-heading">Add new category</div>
+        <div class="panel-heading">Edit category</div>
         <div class="form-wrapper">
             {{ form_start(categoryForm) }}
             {{ form_row(categoryForm.tripCatName, {
