--- a/src/TriplogBundle/Resources/views/Admin/Trip/edit.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Trip/edit.html.twig
@@ -10,9 +10,9 @@
 {% block body %}
     <div class="breacrumb-wrapper">
         <ol class="breadcrumb">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Trips</a></li>
-            <li><a href="#">Edit</a></li>
+            <li><a href="{{ path('admin_dashboard') }}">Home</a></li>
+            <li><a href="{{ path('admin_trip_list') }}">Trips</a></li>
+            <li>Edit</li>
         </ol>
     </div>
     <div class="messages"></div>
@@ -21,7 +21,7 @@
         <div class="form-wrapper">
             {{ form_start(tripForm) }}
             {{ form_row(tripForm.tripName,{
-                'label' : 'Name'
+                'label' : 'Name*'
             }) }}
             {{ form_row(tripForm.tripDesc,{
                 'label' : 'Description'
@@ -30,10 +30,12 @@
                 'label' : 'Public'
             }) }}
             {{ form_row(tripForm.createdAt, {
-                'label' : 'Date'
+                'label' : 'Date*'
             }) }}
             <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
             {{ form_end(tripForm) }}
         </div>
     </div>
 {% endblock %}
+
+
