--- a/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
@@ -12,10 +12,9 @@
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
             <li><a href="{{ path('admin_trip_categories_list') }}">Categories</a></li>
-            <li><a href="#">List</a></li>
+            <li>List</li>
         </ol>
     </div>
-    <div class="messages"></div>
     <div class="action-links clearfix">
         <a href="{{ path('admin_category_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Category</a>
     </div>
@@ -37,7 +36,7 @@
                 <td>{{ category.tripCatname }}</td>
                 <td>{{ category.createdAt | date("Y-m-d H:i:s") }}</td>
                 <td>
-                    <a href="#" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
+                    <a href="{{ path('admin_category_edit', { "id" : category.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
                     <a href="#" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
                 </td>
             </tr>
