--- a/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
@@ -12,10 +12,9 @@
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
             <li><a href="{{ path('admin_trip_locations_list') }}">Locations</a></li>
-            <li><a href="#">List</a></li>
+            <li>List</li>
         </ol>
     </div>
-    <div class="messages"></div>
     <div class="action-links clearfix">
         <a href="{{ path('admin_location_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Location</a>
     </div>
@@ -47,7 +46,7 @@
                 <td>{% if location.isPublic == 1 %}Public{% else %}Private{% endif %}</td>
                 <td>{{ location.createdAt | date("Y-m-d H:i:s") }}</td>
                 <td>
-                    <a href="#" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
+                    <a href="{{ path('admin_location_edit', { "id" : location.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
                     <a href="#" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
                 </td>
             </tr>
