--- a/src/TriplogBundle/Resources/views/Admin/trip.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/trip.index.html.twig
@@ -12,10 +12,9 @@
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
             <li><a href="{{ path('admin_trip_list') }}">Trips</a></li>
-            <li><a href="#">List</a></li>
+            <li>List</li>
         </ol>
     </div>
-    <div class="messages"></div>
     <div class="action-links clearfix">
         <a href="{{ path('admin_trip_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Trip</a>
     </div>
