--- a/src/TriplogBundle/Resources/views/Admin/Trip/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Trip/new.html.twig
@@ -32,7 +32,7 @@
             {{ form_row(tripForm.createdAt, {
                 'label' : 'Date*'
             }) }}
-            <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
+            <button type="submit" class="btn btn-primary" formnovalidate>Add</button>
             {{ form_end(tripForm) }}
         </div>
     </div>
