--- a/src/TriplogBundle/Resources/views/Admin/Category/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Category/new.html.twig
@@ -26,7 +26,7 @@
             {{ form_row(categoryForm.createdAt, {
                 'label' : 'Date*'
             }) }}
-            <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
+            <button type="submit" class="btn btn-primary" formnovalidate>Add</button>
             {{ form_end(categoryForm) }}
         </div>
     </div>
