--- a/src/TriplogBundle/Resources/views/Admin/Location/edit.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Location/edit.html.twig
@@ -41,7 +41,7 @@
             {{ form_row(locationForm.createdAt,{
                 'label' : 'Date*'
             }) }}
-            <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
+            <button type="submit" class="btn btn-warning" formnovalidate>Save</button>
             {{ form_end(locationForm) }}
         </div>
     </div>
