--- a/src/TriplogBundle/Resources/views/Admin/Trip/delete.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Trip/delete.html.twig
@@ -18,21 +18,37 @@
     <div class="messages"></div>
     <div class="panel panel-default">
         <div class="panel-heading">Edit trip</div>
+        <div class="alert alert-danger alert-message">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            By deleting this trip you also delete location and image attached to this trip.
+        </div>
         <div class="form-wrapper">
             {{ form_start(tripForm) }}
             {{ form_row(tripForm.tripName,{
-                'label' : 'Name*'
+                'label' : 'Name*',
+                'attr' : {
+                    'disabled' : 'disabled'
+                }
             }) }}
             {{ form_row(tripForm.tripDesc,{
-                'label' : 'Description'
+                'label' : 'Description',
+                'attr' : {
+                    'disabled' : 'disabled'
+                }
             }) }}
             {{ form_row(tripForm.isPublic,{
-                'label' : 'Public'
+                'label' : 'Public',
+                'attr' : {
+                    'disabled' : 'disabled'
+                }
             }) }}
             {{ form_row(tripForm.createdAt, {
-                'label' : 'Date*'
+                'label' : 'Date*',
+                'attr' : {
+                    'disabled' : 'disabled'
+                }
             }) }}
-            <button type="submit" class="btn btn-warning" formnovalidate>Save</button>
+            <button type="submit" class="btn btn-danger" formnovalidate>Delete</button>
             {{ form_end(tripForm) }}
         </div>
     </div>
