--- a/src/TriplogBundle/Resources/views/Admin/trip.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/trip.index.html.twig
@@ -41,7 +41,7 @@
                 <td>{{ trip.createdAt | date("Y-m-d H:i:s") }}</td>
                 <td>
                     <a href="{{ path('admin_trip_edit', {"id" : trip.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
-                    <a href="#" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
+                    <a href="{{ path('admin_trip_delete', { "id" : trip.id }) }}" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
                 </td>
             </tr>
             {% endfor %}
