--- a/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/category.index.html.twig
@@ -37,7 +37,7 @@
                 <td>{{ category.createdAt | date("Y-m-d H:i:s") }}</td>
                 <td>
                     <a href="{{ path('admin_category_edit', { "id" : category.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
-                    <a href="#" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
+                    <a href="{{ path('admin_category_delete', { "id" : category.id }) }}" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
                 </td>
             </tr>
             {% endfor %}
