--- a/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
@@ -47,7 +47,7 @@
                 <td>{{ location.createdAt | date("Y-m-d H:i:s") }}</td>
                 <td>
                     <a href="{{ path('admin_location_edit', { "id" : location.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
-                    <a href="#" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
+                    <a href="{{ path('admin_location_delete', { "id" : location.id }) }}" class="btn btn-danger"><i class="fa fa-minus-square" aria-hidden="true"></i> Delete</a>
                 </td>
             </tr>
             {% endfor %}
