--- a/app/Resources/views/admin.base.html.twig
+++ b/app/Resources/views/admin.base.html.twig
@@ -40,6 +40,13 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     {% block navbar %}{% endblock %}
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if is_granted('ROLE_USER') %}
+                            <li><a href="{{ path('security_logout') }}">Sign Out</a></li>
+                        {% else %}
+                            <li><a href="{{ path('security_login') }}">Sign In</a></li>
+                        {% endif %}
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
