--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,7 +39,11 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     {% block navbar %}{% endblock %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li><button type="button" class="btn btn-danger navbar-btn">Sign In</button></li>
+                        {% if is_granted('ROLE_USER') %}
+                            <li><a href="{{ path('security_logout') }}">Sign Out</a></li>
+                        {% else %}
+                            <li><a href="{{ path('security_login') }}">Sign In</a></li>
+                        {% endif %}
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
