Add role hierarchy, user registration form.

--- a/src/TriplogBundle/Resources/views/Security/login.html.twig
+++ b/src/TriplogBundle/Resources/views/Security/login.html.twig
@@ -17,6 +17,7 @@
                             {{ form_row(loginForm._username) }}
                             {{ form_row(loginForm._password) }}
                             <button type="submit" class="btn btn-info">Login</button>
+                            <a href="{{ path('user_register') }}">Register</a>
                         {{ form_end(loginForm) }}
                     </div>
                 </div>
