--- a/app/Resources/TwigBundle/Views/Exception/error403.html.twig
+++ b/app/Resources/TwigBundle/Views/Exception/error403.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}404 - Page Not Found{% endblock %}
+{% block title %}403 - Access Forbidden{% endblock %}
 {% block navbar %}
     <ul class="nav navbar-nav">
         <li><a href="{{ path('trip_list') }}">Trips</a></li>
@@ -13,7 +13,7 @@
         <div class="col-md-12">
             <div class="content-header clearfix"></div>
             <div class="content-body">
-                <h1>Page Not Found.</h1>
+                <h1>Access Forbidden.</h1>
             </div>
         </div>
     </div>
