--- a/src/TriplogBundle/Resources/public/css/main.css
+++ b/src/TriplogBundle/Resources/public/css/main.css
@@ -100,3 +100,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin:0;
     font-size: 20px;
 }
+
+/*
+ * Label
+ */
+label.required {
+    color:#da4453;
+}
