--- a/src/TriplogBundle/Resources/views/Admin/Location/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Location/new.html.twig
@@ -5,6 +5,7 @@
         <li><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
         <li><a href="{{ path('admin_trip_categories_list') }}"><i class="fa fa-list-ul" aria-hidden="true"></i> Categories</a></li>
         <li class="active"><a href="{{ path('admin_trip_locations_list') }}"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</a></li>
+        <li><a href="{{ path('admin_trip_user_list') }}"><i class="fa fa-users" aria-hidden="true"></i> Users</a></li>
     </ul>
 {% endblock %}
 {% block body %}
