--- a/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/location.index.html.twig
@@ -5,6 +5,7 @@
         <li><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
         <li><a href="{{ path('admin_trip_categories_list') }}"><i class="fa fa-list-ul" aria-hidden="true"></i> Categories</a></li>
         <li class="active"><a href="{{ path('admin_trip_locations_list') }}"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</a></li>
+        <li><a href="{{ path('admin_trip_user_list') }}"><i class="fa fa-users" aria-hidden="true"></i> Users</a></li>
     </ul>
 {% endblock %}
 {% block body %}
@@ -43,7 +44,7 @@
                 <td>{{ location.trip.tripName }}</td>
                 <td>{% if location.tripCategory is not null %} {{ location.tripCategory.tripCatName }}{% endif %}</td>
                 <td>{{ location.tripLatLon }}</td>
-                <td>{% if location.isPublic == 1 %}Public{% else %}Private{% endif %}</td>
+                <td>{% if location.isPublic == 1 %}<span class="badge badge-success">Public</span>{% else %}<span class="badge badge-danger">Private</span>{% endif %}</td>
                 <td>{{ location.createdAt | date("Y-m-d H:i:s") }}</td>
                 <td>
                     <a href="{{ path('admin_location_edit', { "id" : location.id }) }}" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
