--- a/src/TriplogBundle/Resources/views/Admin/user.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/user.index.html.twig
@@ -2,10 +2,10 @@
 {% extends 'admin.base.html.twig' %}
 {% block sidebar %}
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
+        <li><a href="{{ path('admin_trip_list') }}"><i class="fa fa-plane" aria-hidden="true"></i> Trips</a></li>
         <li><a href="{{ path('admin_trip_categories_list') }}"><i class="fa fa-list-ul" aria-hidden="true"></i> Categories</a></li>
         <li><a href="{{ path('admin_trip_locations_list') }}"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</a></li>
-        <li><a href="{{ path('admin_trip_user_list') }}"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</a></li>
+        <li class="active"><a href="{{ path('admin_trip_user_list') }}"><i class="fa fa-users" aria-hidden="true"></i> Users</a></li>
     </ul>
 {% endblock %}
 {% block body %}
@@ -17,7 +17,7 @@
         </ol>
     </div>
     <div class="action-links clearfix">
-        <a href="{{ path('admin_trip_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Trip</a>
+        <a href="{{ path('admin_trip_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add User</a>
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">Trip list</div>
@@ -25,7 +25,10 @@
             <thead>
             <tr>
                 <th>#</th>
+                <th>Photo</th>
+                <th>Name</th>
                 <th>Email</th>
+                <th>Gender</th>
                 <th>Roles</th>
                 <th>Operations</th>
             </tr>
@@ -34,7 +37,10 @@
             {% for user in users %}
                 <tr>
                     <td>{{ loop.index }}</td>
+                    <td><img width="50" height="50" src="{{ user.profilePicture }}"></td>
+                    <td>{{ user.firstName }} {{ user.lastName }}</td>
                     <td>{{ user.email | slice(0,20)}}...</td>
+                    <td>{{ user.gender }}</td>
                     <td>{{ user.roles|join(",") }}</td>
                     <td>
                         <a href="#" class="btn btn-primary"><i class="fa fa-pencil-square" aria-hidden="true"></i> Edit</a>
