Update user edit form and trip.

--- a/src/TriplogBundle/Resources/views/Admin/Trip/delete.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Trip/delete.html.twig
@@ -32,6 +32,15 @@
                     'class' : 'hidden'
                 }
             }) }}
+            {{ form_row(tripForm.user,{
+                'label_attr' : {
+                    'class' : 'hidden'
+                },
+                'attr': {
+                    'class' : 'hidden'
+                }
+
+            }) }}
             {{ form_row(tripForm.tripDesc,{
                 'label_attr' : {
                     'class' : 'hidden'
