--- a/src/TriplogBundle/Resources/views/Admin/Trip/edit.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/Trip/edit.html.twig
@@ -23,6 +23,9 @@
             {{ form_row(tripForm.tripName,{
                 'label' : 'Name*'
             }) }}
+            {{ form_row(tripForm.user,{
+                'label' : 'User*',
+            }) }}
             {{ form_row(tripForm.tripDesc,{
                 'label' : 'Description'
             }) }}
