--- a/src/TriplogBundle/Resources/views/Admin/user.index.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/user.index.html.twig
@@ -12,12 +12,12 @@
     <div class="breacrumb-wrapper">
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
-            <li><a href="{{ path('admin_trip_list') }}">Trips</a></li>
+            <li><a href="{{ path('admin_trip_user_list') }}">Users</a></li>
             <li>List</li>
         </ol>
     </div>
     <div class="action-links clearfix">
-        <a href="{{ path('admin_trip_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add User</a>
+        <a href="{{ path('admin_trip_user_new') }}" class="btn btn-success btn-small pull-right"><i class="fa fa-plus-square" aria-hidden="true"></i> Add User</a>
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">Trip list</div>
