--- a/src/TriplogBundle/Resources/views/Admin/User/new.html.twig
+++ b/src/TriplogBundle/Resources/views/Admin/User/new.html.twig
@@ -19,7 +19,19 @@
     <div class="panel panel-default">
         <div class="panel-heading">Add new user</div>
         <div class="form-wrapper">
-
+            {{ form_start(userForm) }}
+            {{ form_row(userForm.firstName) }}
+            {{ form_row(userForm.lastName) }}
+            {{ form_row(userForm.gender) }}
+            {{ form_row(userForm.email) }}
+            {{ form_row(userForm.password) }}
+            {{ form_row(userForm.roles) }}
+            {{ form_row(userForm.profilePicture) }}
+            {{ form_row(userForm.createdAt,{
+                'label' : 'Date'
+            }) }}
+            <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
+            {{ form_end(userForm) }}
         </div>
     </div>
 {% endblock %}
